<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">


        <Button
            android:id="@+id/concederPermissaoGPSButton"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:background="@color/colorPrimaryDark"
            android:text="@string/concederPermissaoGPSButton"
            android:textColor="@color/WhiteText" />

        <Button
            android:id="@+id/ativarGPSButton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1.4"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ativarGPSButton"
            android:textColor="@color/WhiteText" />

        <Button
            android:id="@+id/desativarGPSButton"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/desativarGPSButton"
            android:textColor="@color/WhiteText" />

        <Button
            android:id="@+id/iniciarPercursoButton"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1.4"
            android:background="@color/colorPrimaryDark"
            android:text="@string/iniciarPercursoButton"
            android:textColor="@color/WhiteText" />

        <Button
            android:id="@+id/terminarPercursoButton"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1.4"
            android:background="@color/colorPrimaryDark"
            android:text="@string/terminarPercursoButton"
            android:textColor="@color/WhiteText" />
    </GridLayout>

    <TextView
        android:id="@+id/distanciaPercorridaLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:padding="@dimen/paddingLabelsTextView"
        android:paddingTop="@dimen/paddingLabelsTextView"
        android:text="@string/distanciaPercorridaLabel"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/distanciaPercorridaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/paddingLabelsTextView"
        android:background="@color/colorAccent"
        android:padding="@dimen/paddingFieldsTextView"
        android:verticalScrollbarPosition="right" />

    <TextView
        android:id="@+id/tempoDecorridoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:padding="@dimen/paddingLabelsTextView"
        android:paddingTop="@dimen/paddingLabelsTextView"
        android:text="@string/tempoDecorrido"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tempoDecorridoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/paddingLabelsTextView"
        android:background="@color/colorAccent"
        android:padding="@dimen/paddingFieldsTextView"
        android:verticalScrollbarPosition="right" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/buscarTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/buscarTextInputEditText"
                android:layout_width="250sp"
                android:layout_height="match_parent"
                android:hint="@string/hintTextInputLayout"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/BlackText"
                android:textColorLink="@color/colorPrimaryDark" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buscarFloatingActionButton"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimaryDark"

            app:srcCompat="@android:drawable/ic_menu_search" />
    </GridLayout>

    </LinearLayout>





